--- a/Sections/2_Theory_Models/SixS.tex
+++ b/Sections/2_Theory_Models/SixS.tex
@@ -1,4 +1,4 @@
-\section{Synchrotron radiation}
+\section{Synchrotron radiation} \label{SIXS}
 
 Presentation of the MED environment ... 
 
@@ -13,19 +13,6 @@ theta two theta is mu gamma or omega delta
 
 \subsubsection{Residual Gas Analyser}
 
-
-\subsection{Data collection}
-
-Explain here how we actually collect the data
-
-Ewald sphere is quite important here.
-
-\begin{figure}[!htb]
-    \centering
-    \includegraphics[scale=0.6]{Figures/introduction/ewald_sphere_out_of_plane.pdf}
-    \caption{}
-    \label{fig:EwaldSphere}
-\end{figure}
 
 \subsection{Intensity of a Bragg peak}
 Neglecting absorption, the intensity of a Bragg peak $I_{nuc}$ as a function of its Miller indices \textit{hkl} and of $2\theta$ can be written as:
