--- a/Sections/2_Theory_Models/X-ray_interaction_matter.tex
+++ b/Sections/2_Theory_Models/X-ray_interaction_matter.tex
@@ -1,9 +1,9 @@
-\section{X-ray interaction with matter}
+\section{x-ray interaction with matter}
 
-Understanding the different mechanisms at play when photons interact with matter is of crucial importance to be able to decide how to use X-rays as a probe in material science.
-Each phenomenon (absorption, scattering, \textit{etc}) is at the source of different techniques, diffraction brings surface X-ray diffraction (SXRD) and Bragg coherent diffraction imaging (BCDI), two techniques used in the frame of this thesis that give complementary information about the sample structure bulk and surface.
+Understanding the different mechanisms at play when photons interact with matter is of crucial importance to be able to decide how to use x-rays as a probe in material science.
+Each phenomenon (absorption, scattering, \textit{etc}) is at the source of different techniques, diffraction brings surface x-ray diffraction (SXRD) and Bragg coherent diffraction imaging (BCDI), two techniques used in the frame of this thesis that give complementary information about the sample structure bulk and surface.
 
-X-ray absorption together with the photoelectric effect explained by Einstein in 1905 are at the source of a third technique used, X-ray photoelectron spectroscopy, which yields information specific to the nature of the adsorbates on the sample's surface.
+x-ray absorption together with the photoelectric effect explained by Einstein in 1905 are at the source of a third technique used, x-ray photoelectron spectroscopy, which yields information specific to the nature of the adsorbates on the sample's surface.
 
 \begin{table}[!htb]
     \centering
@@ -15,14 +15,14 @@ X-ray absorption together with the photoelectric effect explained by Einstein in
         Diffraction Imaging & (111), (110), (100), ... & density and phase & and displacement \\
         (BCDI) &  &  & \\
         \midrule
-        Surface X-ray & Pt single crystals & Surface & Roughness, relaxation \\
+        Surface x-ray & Pt single crystals & Surface & Roughness, relaxation \\
         Diffraction (SXRD) & (111), (100), (311) & structure & and crystallographic phases \\
         \midrule
-        X-ray Photoelectron & Pt single crystals & Surface & Species presence, \\
+        x-ray Photoelectron & Pt single crystals & Surface & Species presence, \\
         Spectroscopy (XPS) & (111), (100) & species & quantity, oxidation state \\
         \bottomrule
     \end{tabular}
-    \caption{Near-ambient pressure (NAP) X-ray techniques carried out at the SixS (SOLEIL) \\ or B-07 (Diamond) beamlines}
+    \caption{Near-ambient pressure (NAP) x-ray techniques carried out at the SixS (SOLEIL) \\ or B-07 (Diamond) beamlines}
     \label{tab:techniques}
 \end{table}
 
@@ -55,9 +55,9 @@ The conversion between is realized thanks to Planck's constant $h = 6.626 \times
 
 The properties of the photon and its use in our society depends on its energy and wavelength.
 If visible light is situated between $500 \si{\electronvolt}$ and $900 \si{\electronvolt}$, micro-waves used in our everyday life are situated between $10^{-6} \si{\electronvolt}$ and $10^{-4}\si{\electronvolt}$.
-On the other side of the electromagnetic spectrum, we have higher energy photons such as X-rays ($\in [10^{2}, 10^{6}] \si{\electronvolt}$) and $\gamma$-rays (above $10^{6}$ $\si{\electronvolt}$).
+On the other side of the electromagnetic spectrum, we have higher energy photons such as x-rays ($\in [10^{2}, 10^{6}] \si{\electronvolt}$) and $\gamma$-rays (above $10^{6}$ $\si{\electronvolt}$).
 
-X-rays have a wavelength of a few \si{\angstrom} ($10^{-10} \:\si{\meter}$) making them the perfect probe to study the structures of materials at the atomic scale thanks to different interactions with matter.
+x-rays have a wavelength of a few \si{\angstrom} ($10^{-10} \:\si{\meter}$) making them the perfect probe to study the structures of materials at the atomic scale thanks to different interactions with matter.
 
 \subsubsection{Cross-sections}
 
@@ -82,20 +82,20 @@ Compton scattering, also named inelastic scattering, is a process during which s
 This results in a lower energy for the scattered photon (and therefore a higher wavelength) compared to the incident photon.
 %This effect has a low cross-section compared to the two other processes and is therefore not taken account during the experiments.
 
-In the frame of this thesis, the (elastic) Thomson scattering cross-sections is the most important, at the origin of X-ray diffraction.
+In the frame of this thesis, the (elastic) Thomson scattering cross-sections is the most important, at the origin of x-ray diffraction.
 This process is dominant for energies below $200 \si{k\electronvolt}$, together with photoelectric absorption.% for which the K, L and M edges are shown.
 
 \subsubsection{Scattering from an electron}
 
-We begin our discussion of X-ray scattering by considering scattering from a single free electron using classical electromagnetic theory.
-During elastic scattering, the oscillating electric field of the incident X-ray wave exerts an electromagnetic force on the electron, causing it to accelerate and oscillate in the same direction as the incident electronic field.
+We begin our discussion of x-ray scattering by considering scattering from a single free electron using classical electromagnetic theory.
+During elastic scattering, the oscillating electric field of the incident x-ray wave exerts an electromagnetic force on the electron, causing it to accelerate and oscillate in the same direction as the incident electronic field.
 
 \begin{figure}[!htb]
     \centering
     \includegraphics[width=\textwidth]{Figures/introduction/torus.pdf}
     \caption{
-        Effect of relation between synchrotron X-ray polarization $\hat{\epsilon}$ and scattered X-ray polarization $\hat{\epsilon}'$ on the scattered field.
-        Working in the vertical plane is preferable to maximize the intensity of the scattered field, this has pratical repercussions in surface X-ray diffraction for which it is preferable to work in a vertical geometry to scan large 2D areas of the reciprocal space (a).
+        Effect of relation between synchrotron x-ray polarization $\hat{\epsilon}$ and scattered x-ray polarization $\hat{\epsilon}'$ on the scattered field.
+        Working in the vertical plane is preferable to maximize the intensity of the scattered field, this has pratical repercussions in surface x-ray diffraction for which it is preferable to work in a vertical geometry to scan large 2D areas of the reciprocal space (a).
         The scattered field intensity is attenuated by a $\cos{\theta}$ factor, where $\theta$ is the angle between the plane perpendicular to the electric field and the direction of observation $\vec{r}$ (b)
     }
     \label{fig:polarization_effect}
@@ -108,7 +108,7 @@ The scattered field $\vec{E}_{scatt}$ is then proportional to the incident elect
     \label{eq:scatt_field}
     \frac{\vec{E}_{scatt}(R, \, t)} {\vec{E}_{in}} = -r_0 \frac{e^{\vec{k}.\vec{R}}} {|\vec{R}|}| \hat{\epsilon}.\hat{\epsilon}'|
 \end{equation}
-$|\vec{R}|$ is the distance at which the scattering is detected at the time $t$, $\hat{\epsilon}$ is the synchrotron X-ray polarization vector, $\hat{\epsilon}'$ the scattered X-ray polarization vector, and $r_0$ is the Thomson scattering length or the classical radius of the electron defined as:
+$|\vec{R}|$ is the distance at which the scattering is detected at the time $t$, $\hat{\epsilon}$ is the synchrotron x-ray polarization vector, $\hat{\epsilon}'$ the scattered x-ray polarization vector, and $r_0$ is the Thomson scattering length or the classical radius of the electron defined as:
 
 \begin{equation}
     \label{eq:scatt_thomson_scat_length}
@@ -135,7 +135,7 @@ The effect of the polarization of the incident beam is illustrated in figure \re
 At synchrotron sources where the incident beam is horizontally polarized, working in the vertical plane becomes more effective since the polarization factor is always equal to one.
 
 The total cross-section for the scattering event by a single free electron can be computed by integrating the differential cross-section over all the possible scattering angles, \textit{i.e.} by averaging all possible polarization directions \parencite{Willmott}.
-This yields $\sigma_{ts} = 8 \pi r_0^2 /3 = 0.665 \:\si{\barn}$, the total Thomson scattering cross-section is constant, independent of the incoming photon energy. This results holds for X-rays for which the scatterer \textit{i.e.} the electron can be considered as free \parencite{Willmott}.
+This yields $\sigma_{ts} = 8 \pi r_0^2 /3 = 0.665 \:\si{\barn}$, the total Thomson scattering cross-section is constant, independent of the incoming photon energy. This results holds for x-rays for which the scatterer \textit{i.e.} the electron can be considered as free \parencite{Willmott}.
 
 \subsubsection{Scattering from a single atom}
 
@@ -185,7 +185,7 @@ By integrating over the volume occupied by the atom we obtain the total contribu
 \end{equation}
 
 The scattering amplitude as a function of $\vec{q}$ is described by the atomic from factor $f^0(\vec{q})$, which is defined as the Fourier transform of the electronic density $\rho(\vec{r})$.
-This hypothesis is at the basis of several techniques such as Bragg coherent diffraction imaging for which we use Fourier transforms to compute the scattered amplitude (sec. X).
+This hypothesis is at the basis of several techniques such as Bragg coherent diffraction imaging for which we use Fourier transforms to compute the scattered amplitude (sec. \ref{BCDI}).
 
 The values for the atomic from factor can be approximated by a sum of Gaussians using tabulated coefficients (eq. \ref{eq:AtomicFormFactorTab}) available online \parencite{InterTablesOfCryst}.
 It decreases with $\vec{q}$ (or $\sin(\theta) / \lambda)$ as illustrated in figure \ref{fig:atomic_form_factor}.
@@ -209,22 +209,22 @@ This difference in scattering intensity between elements becomes crucial when wo
 \end{figure}
 
 
-\subsection{Refraction, reflection and absoption effects}
+\subsection{Refraction, reflection and absorption effects}\label{RefractionReflectionAbsorption}
 
 For now we have considered the electron as free.
 However, electrons in atoms or molecules exist in discrete bound states (characterised by a binding energy $E_b$), and their response to the incoming electromagnetic field becomes dependent on the incoming energy.
-
+In a classical point of view, we can reconsider the bound electron as a damped harmonic oscillator with associated resonant frequencies $\omega_b$ corresponding to the electron's binding energy.
 First, when approaching the binding energy, the amplitude of the electron's oscillation are reduced and so is the atomic form factor by a real energy-dependant factor $f'(\hbar\omega)$.
 Secondly, when approaching the binding energy, the oscillation of the scattering electron experiences a phase lag.
 This is taken into account by introducing an imaginary energy-dependent factor $f''(\hbar\omega)$.
-The atomic form factor $f^0(\vec{q})$ must therefore be corrected by these two correction factors, we define the total atomic form factor $f(q, \hbar\omega)$ as:
+The atomic form factor $f^0(\vec{q})$ must therefore be corrected by these two correction factors, we define the total atomic form factor $f(q, \hbar\omega)$ as \parencite{NielsenMcMorrow}:
 
 \begin{equation}
     f(\vec{q}, \hbar\omega) = f^0(\vec{q}) + f'(\hbar\omega) + if''(\hbar\omega) = f_1(\vec{q}, \hbar\omega) + i f_2(\hbar\omega)
 \end{equation}
 
 The values of the correction factors $f'$ and $f''$, also known as the dispersion corrections to $f^0$, depend on the electronic structure of the atom and are maximum when approaching the binding energies of the electrons in the atom.
-To understand the impact of the correction factors on the electromagnetic wave inside a material, we introduce the complex refraction index $n$, which for X-rays can be written as:
+To understand the impact of the correction factors on the electromagnetic wave inside a material, we introduce the complex refraction index $n$, which for x-rays can be written as:
 
 \begin{gather}
     n = 1-\delta+i\beta = 1 - \frac{r_0 \lambda^2}{2\pi} \sum_i N_i f_i(\vec{q}=0)\\
@@ -232,12 +232,15 @@ To understand the impact of the correction factors on the electromagnetic wave i
     \delta = \frac{r_0 \lambda^2}{2\pi} \sum_i N_i f_1(\vec{q}=0)\\
     \beta = \frac{r_0 \lambda^2}{2\pi} \sum_i N_i f_2
 \end{gather}
-with $f_i(\vec{q}=0)$ the total atomic form factor of atom $i$ in the forward direction ($\vec{q}=0$) and $N_i$ the number of atoms corresponding to the element $i$ per unit volume, $\delta$ is the refractive index and $\beta$ the absorption index.
+with $f_i(\vec{q}=0)$ the total atomic form factor of the atom $i$ in the forward direction ($\vec{q}=0$), and $N_i$ the number of atoms corresponding to the element $i$ per unit volume.
+$\delta$ is the refractive index and $\beta$ the absorption index.
 
-When impinging on a plane surface between air ($n$=1) and another medium of refractive index $n$, X-rays are refracted, the wavelength changes to $\lambda/n$ and the direction of propagation becomes closer to the surface between both mediums.
-Below a certain incident angle known as the \textit{critical angle} $\alpha_c$ between the direction of the incident X-rays and the plane interface, the X-rays will be totally reflected.
-This effect is used in focussing mirrors for optics
-This angle is approximately equal to $\sqrt{2\delta}$ \parencite{Willmott}.
+During simple experiments, when x-rays impinge on a plane surface between air ($n$=1) and another medium of refractive index $n$, x-rays are refracted, the wavelength changes to $\lambda/n$ and the direction of propagation becomes closer to the surface between both mediums.
+Below a certain incident angle known as the \textit{critical angle} $\alpha_c$ between the direction of the incident x-rays and the plane interface, the x-rays will be totally reflected.
+This effect is used in focussing mirrors for optics but also in techniques used to probe the surface of materials to obtain information about the surface density since the critical angle is approximately equal to $\sqrt{2\delta}$ \parencite{Willmott}.
+Moreover, during surface x-ray diffraction, the incoming angle perpendicular to the surface is kept to very low values approaching the critical angle to limit the volume probed by the x-rays to increase the contrast between the amplitude of the x-rays scattered from the bulk in regard to the x-rays scattered from the latest surface layers.
+The penetration depth of the x-rays in the material is detailed is sec. \ref{SXRD}.
+
 Far from the binding energies of the electron in the system, the correction factor $f'$ in the expression of $\delta$ can be ignored and the sum in eq. \ref{eq:delta} is then equal to the electronic density of the system.
 
 Finally, to highlight the impact of the complex part of the absorption index $\beta$, we express the electric field of a plane electromagnetic wave propagating in the $\vec{z}$ direction inside a material of refractive index $n$ as follows:
@@ -255,7 +258,7 @@ The kinetic energy of the electrons released from the material in the latter sce
 \end{equation}
 
 Measuring the kinetic energy of the photoelectron that escaped the material yields direct information about the different binding energies present in the material, \textit{i.e.} about its electronic structure.
-The study of these kinetic energy is known as X-ray photoelectron spectroscopy (XPS),
+The study of these kinetic energy is known as x-ray photoelectron spectroscopy (XPS),
 a technique used in this thesis to study the electronic structure of the latest atomic layers of a surface, electrons released from atoms in deeper layers being ultimately absorbed(more like cancelled due to the interraction with the e cloud of) by the surrounding atoms.
 The cross-section for XPS is directly proportional to the absorption cross-section $\sigma_a$ (eq. \ref{eq:AbsorptionCrossSection}, fig. \ref{fig:cross_sections}) which can be derived from the imaginary atomic form factor:
 
@@ -306,14 +309,14 @@ For a crystals made of $N_{uc}$ unit cells each composed of $N_{atoms}$ we have:
 
 % When detecting the scattered field at a point $\vec{R}$, we assume that $\|vec{R}|$ is far greater than the electronic density, this is called the dipole approximation. NOT GOOD Each atom can be considered as a ball of certain radius (see \ref{fcc_lattice}).
 
-% Furthermore, we assume that the source and detector are sufficiently far from the charge distribution so that the incident and scattered X-rays may be represented as plane waves, parallel to each other and perpendicular to the direction of propagation. % also more easily described
+% Furthermore, we assume that the source and detector are sufficiently far from the charge distribution so that the incident and scattered x-rays may be represented as plane waves, parallel to each other and perpendicular to the direction of propagation. % also more easily described
 %This is the so-called far-field limit or the fraunhofer region.
 
 % Finally, we assume that the charge distribution is small and that the scattering is weak so that the sample can be treated as a simple "perturbation" to the incident beam resulting in a linear problem \parencite{NielsenMcMorrow} and that the Born approximation is valid.
 
 % Working under these assumption is known as kinematic diffraction for which we can easily derive the intensity of the scattered photons.
 % We therefore ignore multiple-scattering of photons inside the sample and xxx.
-% This is correct when working with low incident angles and penetration depths as for example in surface X-ray diffraction (see Section x).
+% This is correct when working with low incident angles and penetration depths as for example in surface x-ray diffraction (see Section x).
 
 % only valid in far-field, faunhofer region
 % DWBA
@@ -463,7 +466,7 @@ Systematic extinctions ($F_{uc} = 0$) occur when certain diffraction peaks are f
 For example in the FCC lattice of Platinum, systematic extinctions occur when the value of Miller indices are not all even or all odds.
 Otherwise, the intensity of a Bragg peak detected at the scattering vector $\vec{q}$ is equal to $4\times f_{Pt}(\vec{q})$ where $f_{Pt}(\vec{q})$ is the atomic scattering factor of Platinum.
 
-\subsection{Lattice factor}
+\subsection{Lattice factor} \label{LatticeFactor}
 
 If the scattering factor considers the composition of the unit cell, the lattice factor represents the contribution of the crystal lattice to the overall scattering amplitude.
 It takes into account the arrangement of atoms or scatterers within the crystal lattice and their interaction with the incident wave.
@@ -495,12 +498,12 @@ To resume, the lattice factor $F_{lat}(\vec{q})$ defines the shape of Bragg peak
 For a large crystal (\textit{i.e.} a large number of unit cells in three directions), ideal Bragg peaks will look like Dirac functions (in reality they are widened due to different experimental factors).
 For a small crystal such as nanoparticles, the fringes of the lattice factor will be further apart and their intensity more visible in contrast to the intensity of the main peak (fig. ).
 In a more general sense, the lattice factor is the Fourier transform of the crystal's lattice, the effect of the Fourier transform is that fringes will be visible in the reciprocal space in directions perpendicular to the crystal's surface (fig. ).
-The ability to effectively sample these fringes during experiments is at the root of the BCDI technique, to be able to perform the inverse Fourier transform of the Bragg peak to then retrieve the crystal shape (sec. x).
+The ability to effectively sample these fringes during experiments is at the root of the BCDI technique, to be able to perform the inverse Fourier transform of the Bragg peak to then retrieve the crystal shape (sec. \ref{BCDI}).
 
 
 \subsection{Coherence}
 
-Every X-ray source can be described by several parameters.
+Every x-ray source can be described by several parameters.
 The brilliance is a measure of the distribution of flux in both space and angular range, it indicates how the flux is spread over the source area and solid angle.
 
 \begin{equation}
@@ -546,17 +549,17 @@ By assuming that the source has a Gaussian profile, we can relate $D$ to the sta
 At synchrotrons, the vertical and horizontal source size are significantly different due to the shape of the electron beam, much more extended in the horizontal plane.
 The horizontal coherence length is usually smaller and the limiting factor.
 By multiplying the two transverse coherence lengths $L_{T,x}$, $L_{T,y}$ and the longitudinal coherence length $L_L$ we obtain the coherent volume.
-An example if given in sec. x for the SixS beamline of the synchrotron SOLEIL.
+An example if given in sec. \ref{SIXS} for the SixS beamline of the synchrotron SOLEIL.
 
 To perform Bragg coherent diffraction imaging experiments for which the coherent volume must be larger than the sample, the beamline must have low vertical and horizontal emittances, high monochromaticity and a sample environment situated as far as possible from the source.
 Indeed, to be able to resolve the interference fringes resulting from the lattice factor, a high brilliance is crucial since the intensity of the total scattered field, proportional to the scattering volume, is weak.
-A detailed explanation of how to optimize BCDI experiments is given in sec. xxx.
+A detailed explanation of how to optimize BCDI experiments is given in sec. \ref{BCDI}.
 
 \textit{
 So far we have limited ourselves to the kinematical approach of diffraction in the frame of this thesis.
 This means that multiple scattering and effect of absorption and refraction are ignored during diffraction.
 We will see in sec. that for BCDI, multiple scattering imposes an upper limit on particle size if in the kinematical approach while effect of absorption and refraction can be corrected.
-This is justified for Surface X-ray diffraction by the fact that the incoming angle is very low ($\approx 0.3$) and for BCDI by the low volume of the sample ($\approx 0.1 \mu m^3$).
+This is justified for Surface x-ray diffraction by the fact that the incoming angle is very low ($\approx 0.3$) and for BCDI by the low volume of the sample ($\approx 0.1 \mu m^3$).
 We have also assumed that the incident wave is plane and that the phase of the incident wave is the same within the scattering volume.
 }
 
