--- a/references.bib
+++ b/references.bib
@@ -13,6 +13,41 @@ title = {{Development of the kinetic model of platinum catalyzed ammonia oxidati
 volume = {90},
 year = {2002}
 }
+
+
+@article{Schleputz2011,
+author = "Schlep{\"{u}}tz, Christian M. and Mariager, Simon O. and Pauli, Stephan A. and Feidenhans'l, Robert and Willmott, Philip R.",
+title = "{Angle calculations for a (2+3)-type diffractometer: focus on area detectors}",
+journal = "Journal of Applied Crystallography",
+year = "2011",
+volume = "44",
+number = "1",
+pages = "73--83",
+month = "Feb",
+doi = {10.1107/S0021889810048922},
+url = {https://doi.org/10.1107/S0021889810048922},
+abstract = {Angle calculations for a (2+3)-type diffractometer are presented with comprehensive derivations for both cases of either a vertical or horizontal sample configuration. This work focuses on some particular aspects of using area detectors in surface X-ray diffraction, namely the role of the detector rotation and the direct conversion of the angle-resolved diffraction signal recorded by the detector into a two-dimensional slice through reciprocal space.},
+keywords = {angle calculations, diffractometers, pixel detectors, grazing-incidence diffraction, surface diffraction, reciprocal-space mapping},
+}
+
+
+
+@article{Vlieg2000,
+author = {Vlieg, Elias},
+title = {ROD: a program for surface X-ray crystallography},
+journal = {Journal of Applied Crystallography},
+volume = {33},
+number = {2},
+pages = {401-405},
+doi = {https://doi.org/10.1107/S0021889899013655},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1107/S0021889899013655},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1107/S0021889899013655},
+abstract = {A brief description is given of the C-program ROD with which surface structures can be refined on the basis of X-ray data. All main features one encounters on surfaces, like roughness, relaxations, reconstructions and multiple domains, are taken into account. The program has proven to be a useful tool over the past ten years.},
+year = {2000}
+}
+
+
+
 @article{Gu2007,
 abstract = {Density functional theory is used to examine binding energies and the most stable sites of atomic oxygen adsorbed on Pt(111) and Pt(100) surfaces as a function of surface coverage, as well as to evaluate the absorption energies and the energetically most favorable sites of atomic oxygen located in the subsurface, as a function of subsurface coverage. Based on the absorption energies, it is found that the tetrahedral site underneath the hep hollow site is energetically the most favorable site to absorb atomic oxygen in the subsurface of Pt(111), and the tetrahedral site underneath the bridge site is the corresponding energetically most favorable subsurface site in Pt(100) cells. Minimum energy paths identified for the diffusion of low-coverage adsorbed atomic oxygen into the subsurface sites for Pt(111) and Pt(100) cells indicate the existence of high kinetic barriers to such diffusion. {\textcopyright} 2007 American Chemical Society.},
 author = {Gu, Zhihui and Balbuena, Perla B.},
@@ -1084,19 +1119,52 @@ title = {{X-RAY OPTICS FOR SYNCHROTRON RADIATION}},
 volume = {82},
 year = {1992}
 }
+
+@article{Kaganer2007,
+   author = {Vladimir M Kaganer},
+   doi = {10.1103/PhysRevB.75.245425},
+   issue = {February},
+   journal = {Physical Review B},
+   pages = {1-6},
+   title = {Crystal truncation rods in kinematical and dynamical x-ray diffraction theories},
+   volume = {75},
+   year = {2007},
+}
+
+
+@article{Fadenberger2010InSO,
+  title={In situ observation of rapid reactions in nanoscale Ni-Al multilayer foils using synchrotron radiation},
+  author={Konrad Fadenberger and Ibrahim E. Gunduz and C. Tsotsos and Maria Kokonou and Styliani Gravani and Stefan Brandstetter and Anna Bergamaschi and Bernd Schmitt and Paul H. Mayrhofer and Charalabos C. Doumanidis and Claus Rebholz},
+  journal={Applied Physics Letters},
+  year={2010},
+  volume={97},
+  pages={144101}
+}
+
+@article{Andrews1985,
+doi = {10.1088/0022-3719/18/35/008},
+url = {https://dx.doi.org/10.1088/0022-3719/18/35/008},
+year = {1985},
+month = {dec},
+publisher = {},
+volume = {18},
+number = {35},
+pages = {6427},
+author = {S R Andrews and  R A Cowley},
+title = {Scattering of X-rays from crystal surfaces},
+journal = {Journal of Physics C: Solid State Physics},
+abstract = {X-ray measurements performed on a variety of materials demonstrate that it is possible to observe diffuse scattering that originates in the abrupt change of density at a crystal surface. Such a discontinuity gives rise, in general, to rods of scattering in reciprocal space which are most intense close to the Bragg peaks tau and are well defined for sufficiently smooth surfaces. For wave-vector transfer Q= tau +q the q-dependence of the intensity of scattering gives information on the topographic structure of the crystal surface. Experimental results on crystals of GaAs and KTaO3, with surfaces prepared in various ways, were obtained using conventional X-ray techniques with a rotating anode source and can be described by a continuum model of the surface. There are discrepancies between the predictions of the models and the experimental results and these suggest that further experiments are needed to achieve a more complete understanding.}
+}
+
+
 @article{Robinson1986,
-abstract = {We present x-ray-diffraction profiles from a variety of different crystals which are characteristi- cally diffuse in the direction perpendicular to the surface through which the incident and diffracted beams pass, but sharp in both parallel directions. %'e show that these effects arise from truncation of the crystal lattice at the surface. To explain the precise form of the momentum-transfer depen- dence of the intensity across the reciprocal-space zone, it is necessary to include the effects of sur- face roughness on an atomic scale. Such measurements therefore allow highly sensitive roughness determinations to be made. Understanding the origin of these streaks of intensity will have signifi- cant impact on the practice of x-ray crystallographic determinations of surface structure},
-annote = {The importance of the Brillouin zone stems from the description of waves in a periodic medium given by Bloch's theorem, in which it is found that the solutions can be completely characterized by their behavior in a single Brillouin zone.
-
-The first Brillouin zone is the locus of points in reciprocal space that are closer to the origin of the reciprocal lattice than they are to any other reciprocal lattice points (see the derivation of the Wigner–Seitz cell). Another definition is as the set of points in k-space that can be reached from the origin without crossing any Bragg plane.
-
-A related concept is that of the irreducible Brillouin zone, which is the first Brillouin zone reduced by all of the symmetries in the point group of the lattice (point group of the crystal).},
+abstract = {We present x-ray-diffraction profiles from a variety of different crystals which are characteristically diffuse in the direction perpendicular to the surface through which the incident and diffracted beams pass, but sharp in both parallel directions. We show that these effects arise from truncation of the crystal lattice at the surface. To explain the precise form of the momentum-transfer depen- dence of the intensity across the reciprocal-space zone, it is necessary to include the effects of surface roughness on an atomic scale. Such measurements therefore allow highly sensitive roughness determinations to be made. Understanding the origin of these streaks of intensity will have significant impact on the practice of x-ray crystallographic determinations of surface structure},
+annote = {The importance of the Brillouin zone stems from the description of waves in a periodic medium given by Bloch's theorem, in which it is found that the solutions can be completely characterized by their behavior in a single Brillouin zone. The first Brillouin zone is the locus of points in reciprocal space that are closer to the origin of the reciprocal lattice than they are to any other reciprocal lattice points (see the derivation of the Wigner–Seitz cell). Another definition is as the set of points in k-space that can be reached from the origin without crossing any Bragg plane. A related concept is that of the irreducible Brillouin zone, which is the first Brillouin zone reduced by all of the symmetries in the point group of the lattice (point group of the crystal).},
 author = {Robinson, I. K.},
-file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Robinson - 1986 - Crystal truncation rods and surface roughness.pdf:pdf},
 journal = {Phys. Rev. B},
 number = {6},
 pages = {3830 -- 3836},
-title = {{Crystal truncation rods and surface roughness}},
+title = {Crystal truncation rods and surface roughness},
 volume = {33},
 year = {1986}
 }
